[project]
name = "lanczos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab-rise>=0.43.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "plotly>=6.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
